# simple_shell

./: .codetogether.ignore  CMakeLists.txt  README.md  aid_assist.c  aid_assist2.c  aid_conc.c  aid_conc2.c  aid_conc3.c  aid_err1.c  aid_err2.c  aid_list.c  aid_list2.c  aid_memory.c  aid_stardlib.c  all_error.c  aux_error1.c  aux_error2.c  aux_stdlib.c  aux_str3.c  build_cd.c  build_cd_shell.c  cd.c  cd_shell.c  check_syntax_error.c  cmd_exec.c  comand_exec.c  dismiss_shell.c  env1.c  env2.c  exec_line.c  exit_shell.c  get_all_builtin.c  get_builtin.c  get_error.c  get_help.c  get_line.c  get_sigint.c  ghelp.c  lets_execute.c  main.c  (+6 more)
